[package]
name = "geoparquet"
version = "0.0.0"
edition = "2021"
description = "WIP geoparquet reader and writer"
authors = ["Apps4u_co"]
#homepage="http://apps4u.co/"
documentation="https://docs.rs/geoparquet"
repository="https://github.com/apps4uco/geoparquet"
keywords = ["geoparquet","parquet","gis","geospatial"]
categories = ["data-structures","database-implementations","parser-implementations"]
license = "MIT OR Apache-2.0"

[dependencies]
